typescript/checker/tests/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature3.ts.stderr
error: Unexpected token Some(RBracket)
 --> $DIR/tests/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature3.ts:2:6
  |
2 |   [a?]
  |      ^

